<resources>
    <string name="app_name">OutcomeHealthVideos</string>
    <string name="app_title">Outcome Health Videos</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="dialog_title_about">About Outcome Health Video</string>
    <string name="email">sangklam@gmail.com</string>
    <string name="email_formatted">Email: <u>sangklam@gmail.com</u></string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_title_thumbnail_frame_at_time">Enter Thumbnail at Time</string>
    <string name="dialog_msg_thumbnail_frame_at_time">Enter time in milliseconds:</string>


    <!-- Preference Page  -->
    <string name="pref_general_settings_title">General Settings</string>
    <string name="pref_retrieve_video_duration_time">Retrieve Video Duration</string>
    <string name="pref_retrieve_video_duration_time_info">Retrieve the video\'s duration time will cause the app to run a bit slower on startup.\nOnce all the videos\' time duration have been obtained and cached, the performance will be very swift and smooth.</string>
    <string name="pref_cache_thumbnail_images">Cache Thumbnail Images</string>
    <string name="pref_cache_thumbnail_images_info">Cache thumbnail images to improve the performace, but it will use more memory spaces.</string>
    <string name="pref_retrieve_thumbnail_from_video">Retrieve Thumbnail from Video</string>
    <string name="pref_retrieve_thumbnail_from_video_info">Retrieve Thumbnail from Video clip itself rather than an external thumbnail url.</string>

    <string name="pref_key_app_version_code">pref_key_app_version_code</string>
    <string name="pref_key_app_version_name">pref_key_app_version_name</string>
    <string name="pref_key_retrieve_video_duration_time">pref_key_retrieve_video_duration_time</string>
    <string name="pref_key_retrieve_thumbnail_from_video">pref_key_retrieve_thumbnail_from_video</string>
    <string name="pref_key_cache_thumbnail_images">pref_key_cache_thumbnail_images</string>
    <string name="pref_key_thumbnail_frame_at_time">pref_key_thumbnail_frame_at_time</string>


    <!-- Error message -->
    <string name="error_no_video_link_found">No video link found</string>
</resources>
